--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
+[submodule "fabric-loom"]
+	path = fabric-loom
+	url = https://github.com/FabricMC/fabric-loom.git
 [submodule "paperweight"]
 	path = paperweight
 	url = https://github.com/PaperMC/paperweight.git
